# katido

./: README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  modules.ts  styles.css  tools.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Tools.vue
src/components/ui/button/: index.ts
src/components/ui/card/: Card.vue  CardTitle.vue
src/components/ui/command/: Command.vue  CommandDialog.vue  CommandEmpty.vue  CommandGroup.vue  CommandInput.vue  CommandItem.vue  CommandList.vue  CommandSeparator.vue  CommandShortcut.vue
src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogHeader.vue  DialogScrollContent.vue  DialogTitle.vue
src/components/ui/input/: Input.vue
src/components/ui/select/: SelectContent.vue  SelectGroup.vue  SelectItem.vue  SelectLabel.vue  SelectScrollDownButton.vue  SelectScrollUpButton.vue  SelectSeparator.vue  SelectTrigger.vue
src/components/ui/separator/: Separator.vue
src/components/ui/textarea/: Textarea.vue
src/modules/: ColorConvert.vue  TextCounter.vue
src/tools/: ColorConvert.vue  LoremIpsum.vue  TextCounter.vue  index.ts
src/tools/DataConvert/: index.vue  lib.ts
